# ml-processing-service

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.envs/: template.env
backend/: requirements.txt
backend/app/: config.py  database.py  login.py  main.py  manage_users.py  password.py
backend/app/routers/: auth.py  denoise.py
backend/app/services/denoise/: __init__.py  denoise.py
src/backend/: app.py  config.py  database.py  main.py
src/backend/auth/: login.py
src/backend/cli/: manage_users.py
src/backend/routers/: auth.py  denoise.py
src/backend/services/denoise/: __init__.py  denoise.py
src/backend/utils/: zip_archive.py
tests/: test_zip_archive.py
